Clear Linux window attention state